<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_action_ordenacao_ascendente"
        android:title="@string/ordering"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about" />
</menu>