<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AboutActivity">

<TextView
    android:id="@+id/textAbout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="24dp"
    android:text="@string/about"
    android:textStyle="bold"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSpecialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/java_specialization"
        app:layout_constraintStart_toStartOf="@+id/textAppDescription"
        app:layout_constraintTop_toBottomOf="@+id/textAbout" />

<TextView
    android:id="@+id/textAppDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="16dp"
    android:text="@string/app_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textSpecialization" />

<ImageView
    android:id="@+id/logoImageView"
    android:layout_width="187dp"
    android:layout_height="188dp"
    android:layout_marginTop="16dp"
    android:contentDescription="@string/logo_description"
    android:src="@drawable/logo_utfpr"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textAppDescription"
    app:layout_constraintStart_toStartOf="@+id/textAppDescription"
    app:layout_constraintTop_toBottomOf="@+id/textAppDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>